# CodeStorm

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Project_Bible.md  README.md  docker-compose.yml  main.go
api-gateway/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
api-gateway/db/: db.go
api-gateway/handlers/: errors.go  health.go  incidents.go  matcher_stats.go  metrics.go  resolve.go  sources.go  transactions.go  ws.go
api-gateway/migrations/: 001_initial.sql
api-gateway/models/: models.go
api-gateway/scripts/: seed.go
api/db/: db.go
api/handlers/: transactions.go
api/models/: models.go
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/.claude/: launch.json
frontend/src/: App.jsx  index.css
matcher/: Cargo.toml  Dockerfile  docker-compose.yml
matcher/migrations/: 001_initial.sql  002_add_processing_time.sql
matcher/src/: config.rs  error.rs  main.rs  matcher.rs  model.rs  publisher.rs  store.rs  stream.rs  timer.rs
memory/: MEMORY.md  project_codestorm.md
services/: Makefile  docker-compose.yaml
services/api-gateway/: Dockerfile  docker-compose.yml  go.mod  go.sum
services/contracts/: 001_initial.sql
services/emulator-bank/: DockerFile  Dockerfile  go.mod  main.go
services/emulator-common/: go.mod  go.sum  noise.go  types.go
services/emulator-gateway/: Dockerfile  go.mod  main.go
services/emulator-merchant/: Dockerfile  go.mod  main.go
services/ingestor/: DockerFile  Dockerfile  db.go  go.mod  go.sum  handler.go  main.go  redis.go
services/scenario/: DockerFile  (+3 more)
(+31 files in other folders)
