[package]
name = "reconciler"
version = "0.1.0"
edition = "2021"
description = "Multi-party payment reconciliation engine"

[[bin]]
name = "reconciler"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Concurrent map (lock-free reads)
dashmap = "5.5"

# Redis client with async + streams + pubsub support
redis = { version = "0.24", features = ["tokio-comp", "streams", "connection-manager"] }

# Postgres client
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID v7 для internal_event_id и UUID v4 совместимости
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Время
chrono = { version = "0.4", features = ["serde"] }

# Структурированные логи
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Конфигурация из env
envy = "0.4"

# Метрики (опционально для бонусов)
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true